# greek-syllables

./: Cargo.toml  README.md  rustfmt.toml
src/: lib.rs
